; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_socket2.c_sbdroprecord.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_socket2.c_sbdroprecord.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockbuf = type { %struct.mbuf* }
%struct.mbuf = type { %struct.mbuf* }

@EV_RWBYTES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sbdroprecord(%struct.sockbuf* %0) #0 {
  %2 = alloca %struct.sockbuf*, align 8
  %3 = alloca %struct.mbuf*, align 8
  %4 = alloca %struct.mbuf*, align 8
  store %struct.sockbuf* %0, %struct.sockbuf** %2, align 8
  %5 = load %struct.sockbuf*, %struct.sockbuf** %2, align 8
  %6 = getelementptr inbounds %struct.sockbuf, %struct.sockbuf* %5, i32 0, i32 0
  %7 = load %struct.mbuf*, %struct.mbuf** %6, align 8
  store %struct.mbuf* %7, %struct.mbuf** %3, align 8
  %8 = load %struct.mbuf*, %struct.mbuf** %3, align 8
  %9 = icmp ne %struct.mbuf* %8, null
  br i1 %9, label %10, label %28

10:                                               ; preds = %1
  %11 = load %struct.mbuf*, %struct.mbuf** %3, align 8
  %12 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %11, i32 0, i32 0
  %13 = load %struct.mbuf*, %struct.mbuf** %12, align 8
  %14 = load %struct.sockbuf*, %struct.sockbuf** %2, align 8
  %15 = getelementptr inbounds %struct.sockbuf, %struct.sockbuf* %14, i32 0, i32 0
  store %struct.mbuf* %13, %struct.mbuf** %15, align 8
  br label %16

16:                                               ; preds = %24, %10
  %17 = load %struct.sockbuf*, %struct.sockbuf** %2, align 8
  %18 = load %struct.mbuf*, %struct.mbuf** %3, align 8
  %19 = call i32 @sbfree(%struct.sockbuf* %17, %struct.mbuf* %18)
  %20 = load %struct.mbuf*, %struct.mbuf** %3, align 8
  %21 = load %struct.mbuf*, %struct.mbuf** %4, align 8
  %22 = call i32 @MFREE(%struct.mbuf* %20, %struct.mbuf* %21)
  %23 = load %struct.mbuf*, %struct.mbuf** %4, align 8
  store %struct.mbuf* %23, %struct.mbuf** %3, align 8
  br label %24

24:                                               ; preds = %16
  %25 = load %struct.mbuf*, %struct.mbuf** %3, align 8
  %26 = icmp ne %struct.mbuf* %25, null
  br i1 %26, label %16, label %27

27:                                               ; preds = %24
  br label %28

28:                                               ; preds = %27, %1
  %29 = load %struct.sockbuf*, %struct.sockbuf** %2, align 8
  %30 = call i32 @SB_EMPTY_FIXUP(%struct.sockbuf* %29)
  %31 = load %struct.sockbuf*, %struct.sockbuf** %2, align 8
  %32 = load i32, i32* @EV_RWBYTES, align 4
  %33 = call i32 @postevent(i32 0, %struct.sockbuf* %31, i32 %32)
  ret void
}

declare dso_local i32 @sbfree(%struct.sockbuf*, %struct.mbuf*) #1

declare dso_local i32 @MFREE(%struct.mbuf*, %struct.mbuf*) #1

declare dso_local i32 @SB_EMPTY_FIXUP(%struct.sockbuf*) #1

declare dso_local i32 @postevent(i32, %struct.sockbuf*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
